fixed layout issues

--- a/src/components/grid-table/GridContainer.css
+++ b/src/components/grid-table/GridContainer.css
@@ -1,30 +1,35 @@
 .container {
   display: grid;
-  grid-template: repeat(2, 200px) / repeat(10, 150px);
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   width: 100vw;
   gap: 12px;
-  place-items: center;
+  justify-items: center;
+  align-items: center;
   overflow-x: scroll;
   overflow-y: hidden;
   padding-top: 12px;
 }
-
-
-.card{
-  transition: transform 0.3s ease-in-out,width 0.3s ease-in-out , height 0.3s;
+.card {
+  transition: transform 0.3s ease-in-out, width 0.3s ease-in-out, height 0.3s;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.card:hover{
-  transform: scale(1.2);
-  height: 210px;
-  width: 210px;
+.card:hover {
+  transform: scale(1.1);
   cursor: pointer;
 }
 
 .card img {
-    object-fit: contain;
-    width: 200px;
-    height: 200px;
-    margin: 5px 5px;
-    padding: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 110px));
+  }
 }
